...
            "state" : "translated",
            "value" : "Nome da família"
          }
        }
      }
    },
    "Family Sharing" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مشاركة العائلة"
          }
...
            "state" : "translated",
            "value" : "Família compartilhada"
          }
        }
      }
    },
    "Family Sharing & Kid Login" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مشاركة العائلة ودخول الأطفال"
          }
...
            "state" : "translated",
            "value" : "Manter minha conta"
          }
        }
      }
    },
    "Kid Login" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "دخول الأطفال"
          }
...
